# play-samples

./: .gitignore
play-scala-macwire-di-example/: .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  build.sbt  dependencies.yaml
play-scala-macwire-di-example/app/: BUILD  BUILD.bazel  GreetingApplicationLoader.scala  GreetingModule.scala  Main.scala
play-scala-macwire-di-example/app/common/domain/: LinkMeta.scala
play-scala-macwire-di-example/app/common/exception/: DuplicateResourceException.scala  ResourceNotFoundException.scala  UpdateFailedException.scala
play-scala-macwire-di-example/app/common/formatter/: MongoObjectIdFormatter.scala
play-scala-macwire-di-example/app/common/repository/: Guards.scala  IdParser.scala  Repository.scala
play-scala-macwire-di-example/app/common/util/: MapUtil.scala
play-scala-macwire-di-example/app/common/web/api/: Api.scala  ApiError.scala  ApiRequestHeader.scala  ApiResponse.scala  ApiResult.scala  ErrorHandler.scala  Page.scala
play-scala-macwire-di-example/app/controllers/: BUILD  GreeterController.scala
play-scala-macwire-di-example/app/models/: BUILD.bazel  Entry.scala
play-scala-macwire-di-example/app/repository/: BaseRepository.scala
play-scala-macwire-di-example/app/services/: BUILD  GreetingService.scala  ServicesModule.scala
play-scala-macwire-di-example/conf/: BUILD  BUILD.bazel  application.conf  routes
play-scala-macwire-di-example/old/concurrent/: BUILD  MscContextHolder.scala  MscDispatcher.scala
