load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test",)
load("@io_bazel_rules_docker//scala:image.bzl", "scala_image",)
#load("@io_bazel_rules_docker//container:container.bzl", "container_image")

scala_binary(
    name = "bin",
    srcs = [
            "GreetingApplicationLoader.scala", 
            "GreetingModule.scala",
            "//conf:play-routes"],
    visibility = ["//visibility:public"],
    main_class = "play.core.server.ProdServerStart",
    deps = ["//:play", 
            "//:macwire", 
            "//app/controllers:controllers", 
            "//app/services:services"],
    resource_strip_prefix = package_name(),
    classpath_resources = ["//conf:app_conf"],
    jvm_flags = [
    "-Dhttp.port=9000",
    "-Dapplication.name=bin",
    ],
)

scala_image(
    name = "image",
    srcs = [
            "GreetingApplicationLoader.scala", 
            "GreetingModule.scala",
            "//conf:play-routes"],
    visibility = ["//visibility:public"],
    main_class = "play.core.server.ProdServerStart",
    deps = ["//:play", 
            "//:macwire", 
            "//app/controllers:controllers", 
            "//app/services:services"],
    resource_strip_prefix = package_name(),
    classpath_resources = ["//conf:app_conf"],
    jvm_flags = [
    "-Dhttp.port=9000",
    "-Dapplication.name=bin",
    ],
)
